add a "rotate" endpoint to re-ecrypt webauthn keys with a new secret
Note: this has at least two deficiences: (1) it does not do anything with the TOTP table, and (2) is does not re-encrypt the data for legacy U2F keys
